# pandas-vs-polars-benchmark

./: .gitignore  README.md  run_benchmarks.sh
python-pandas/: pandas_etl.py  requirements.txt
results/: pandas_daily_stats.csv  pandas_distance_analysis.csv  pandas_dow_stats.csv  pandas_hourly_stats.csv  pandas_metrics.json  pandas_summary.json  performance_comparison.csv  polars_metrics.json
rust-polars/: Cargo.toml  Shuttle.toml  deploy_to_shuttle.sh
rust-polars/src/: etl.rs  main.rs
scripts/: download_data.sh
