[package]
name = "polars-etl-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
# Pin to a pre-0.50 release to avoid the TZ_AWARE_RE bug
polars = { version = "=0.49.1", default-features = false, features = ["lazy", "temporal", "strings", "csv"] }

# Runtime / server stack (pinned to stable, widely used versions)
tokio = { version = "1.47", features = ["rt-multi-thread","macros"] }
axum = "0.8.4"
tower-http = { version = "0.6.6", features = ["cors"] }

# Utilities
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

# Keep Shuttle out until everything compiles locally; add back once you’re ready to deploy.
 shuttle-runtime = "0.56"
 shuttle-axum = "0.56"

# Optional: make release builds more consistent for benchmarks
[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"

[features]
default = []
shuttle-deploy = []
